<resources>
    <string name="app_name">Syarty</string>

    <string name="check_internet_connection">برجاء الاتصال بالانترنت</string>

    <!--Dialogs-->
    <string name="no_internet">لا يوجد انترنت</string>
    <string name="no_internet_message">لا يوجد لديك اتصال بالانترنت</string>
    <string name="enable_3g">تفعيل الاتصال ب 3G</string>
    <string name="enable_wifi">تفعيل شبكة اللاسلكي</string>
    <string name="exit">الخروج</string>
    <string name="call_client">الاتصال</string>
    <string name="no_gps">GPS</string>
    <string name="no_gps_message">الرجاء تشغيل خدمة تحديد المواقع</string>
    <string name="enable_gps">تفعيل تحديد المواقع</string>
    <string name="sure_to_call_client">هل تريد الاتصال ب%s\n%s</string>
    <string name="call">الاتصال</string>
    <string name="cancel">الغاء</string>
    <string name="text_please_wait">انتظر...</string>
    <string name="empty_edit_text_error_message">مطلوب</string>
    <string name="some_error">حدث خطأ ما \nحاول مرة أخرى</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="version_number">V%s</string>
    <string name="name_hint">الاسم</string>
    <string name="arabic_app_name">تطبيق تسليم السيارات</string>
    <string name="login_label">تسجيل الدخول</string>
    <string name="login_screen_title">تسجيل الدخول</string>
    <string name="forget_password_label">نسيت كلمة السر</string>
    <string name="phone_number_hint">رقم الموبايل</string>
    <string name="password_hint">كلمة المرور</string>
    <string name="phone_number_error">رقم الموبايل غير صحيح</string>
    <string name="password_error">كلمة السر غير صحيحة</string>
    <string name="daily_cap">تصوير يومي</string>
    <string name="truck_deliver">عملية تسليم</string>
    <string name="dashboard_title">الصفحة الرئيسية</string>
    <string name="back_side_hint">برجاء تصوير ظهر السيارة</string>
    <string name="capture">تصوير</string>
    <string name="front_side_hint">برجاء تصوير مقدمة السيارة</string>
    <string name="left_side_hint">برجاء تصوير جانب السيارة الأيسر</string>
    <string name="right_side_hint">برجاء تصوير جانب السيارة الأيمن</string>
    <string name="right_side_title">الجانب الأيمن</string>
    <string name="next_step">الخطوة التالية</string>
    <string name="back_Side_title">ظهر السيارة</string>
    <string name="left_side_title">الجانب الأيسر</string>
    <string name="front_Side_title">مقدمة السيارة</string>
    <string name="confirmation_hint">برجاء تاكيد جميع صور السيارة</string>
    <string name="confirm">تأكيد</string>
    <string name="right_side_update">هل تريد تعديل صورة الجانب الأيمن ؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="back_side_update">هل تريد تعديل صورة ظهر السيارة</string>
    <string name="left_side_update">هل تريد تعديل صورة جانب السايرة الأيسر</string>
    <string name="front_side_update">هل تريد تعديل صورة مقدمة السيارة</string>
    <string name="login_error">رقم الهاتف او كلمة سر خاطئة</string>
    <string name="loading">تحميل</string>
    <string name="add_comment">إضافة تعليق</string>
    <string name="default_notification_channel_id">1515</string>
    <string name="snooze">تأخير</string>
    <string name="new_request">عملية تسليم جديدة</string>
    <string name="reject">رفض</string>
    <string name="accept">قبول</string>
    <string name="select_receiver">برجاء إختيار اسم السائق المستلم</string>
    <string name="select_receiver_title">اختيار السائق المستلم</string>
    <string name="accept_with_photos">تصوير</string>
    <string name="accept_without_photos">بدون تصوير</string>
    <string name="sendIsDone">تم الإرسال بنجاح</string>
    <string name="delay">تأخير</string>
    <string name="delay_message">تم تأخير عملية تسليم</string>
    <string name="edit">تعديل</string>
    <string name="refused">عملية مرفوضة</string>
    <string name="receiver_refused">السائق المستلم رفض عملية التسليم</string>
    <string name="offline">إنك بدون إنترنت برجاء تفعيل الخدمة والمحاولة مجددا</string>
    <string name="deleted">تم حذف الصور من الجهاز برجاء البدء من جديد</string>
    <string name="select_car">برجاء اختيار رقم لوحة السيارة التي تريد تسلميها</string>
    <string name="select_car2">برجاء اختيار رقم لوحة السيارة التي تريد تصويرها</string>
    <string name="select_car_title">اختيار سيارة</string>
    <string name="no_cars">عفوا أنت لا تمتلك أي سيارة في الوقت الحالي</string>
    <string name="back">الرجوع</string>
    <string name="frequent_reminder_title">عملية تصوير</string>
    <string name="frequent_reminder_message">لديك عملية تصوير جديدة نرجوا القيام بها في أسرع وقت</string>
    <string name="delay_half_hour">نصف ساعة</string>
    <string name="delay_one_hour">ساعة</string>
    <string name="capture_loading">جاري معالجة الصورة</string>
    <string name="ok">موافق</string>
    <string name="Tool_kit">شنطة العدة وقفل الدريكسيون</string>
    <string name="fire_cancel">طفاية حريق</string>
    <string name="first_aid">شنطة الإسعافات</string>
    <string name="estipn">الإستبن</string>
    <string name="attached_confirmation_hint">برجاء تأكيد ملحقات السيارة</string>
    <string name="Attached_title">الملحقات</string>
    <string name="verify_new_case">إثبات حالة</string>
    <string name="add_issue">شكوى جديدة</string>
    <string name="issues">الشكاوى</string>
    <string name="title_activity_issues">الشكاوى</string>
    <string name="no_issues">لا توجد شكاوى سابقة</string>
    <string name="title_activity_issue_feed_back">تقرير الشكوى</string>
    <string name="must_enter_content">يجب إدخال الشكوى</string>
    <string name="must_enter_title">يجب اختيار عنوان</string>
    <string name="issueConfirmed">تم تقديم الشكوى</string>
    <string name="new_issue">شكوى جديدة</string>
    <string name="issue_hint">برجاء توضيح الشكوى تماما حتى نتمكن من حلها في اسرع وقت</string>
    <string name="issue_content">تفاصيل الشكوى</string>
    <string name="no_feedback">لم يتم الرد على هذه الشكوى</string>
    <string name="issue_title">عنوان الشكوى :</string>
    <string name="report_issue">ارسال الشكوي</string>
    <string name="welcome_name">مرحبا بك %S </string>
    <string name="logout">تسجيل الخروج</string>
    <string name="new_request_title">عملية تسليم جديدة من: %s</string>
    <string name="electric">كهرباء السيارة والإنارة</string>
    <string name="update_version">قم بتحديث البرنامج</string>
    <string name="update_version_available">يوجد تحديث لبرنامج البايلوت، من فضلك قم به حتي يمكنك الدخول</string>
    <string name="update">تحديث</string>
    <string name="overlay_title">عرض البرنامج من الخلفية</string>
    <string name="overlay_message">يجب تمكين عرض البرنامج من الخلفية كما هو موضح</string>
    <string name="enable">تمكين</string>
    <string-array name="issues_titles">
        <item>مشكلة في التسليم</item>
        <item>مشكلة مع الاستلام</item>
        <item>مشكلة في إثبات الحالة</item>
        <item>مشكلة في الرفض</item>
        <item>مشكلة في اختيار السائق</item>
        <item>مشكلة في اختيار السيارة</item>
        <item>مشكلة اخرى</item>

    </string-array>

</resources>
