<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.daily.AttachedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:id="@+id/hint_tv"
                style="@style/CairoRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/attached_confirmation_hint"
                android:textSize="@dimen/_26sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/il"
                android:layout_below="@+id/hint_tv"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:gravity="center_vertical"
                android:columnOrderPreserved="false"
                android:orientation="vertical"
                android:rowCount="2">

                <CheckBox
                    android:id="@+id/toolKitCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tool_kit"
                    android:textSize="@dimen/_20sdp"
                    android:checked="true"
                    android:layout_margin="@dimen/_3sdp"/>

                <CheckBox
                    android:id="@+id/fireCancelCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fire_cancel"
                    android:layout_margin="@dimen/_3sdp"
                    android:checked="true"
                    android:textSize="@dimen/_20sdp"/>

                <CheckBox
                    android:id="@+id/firstAidCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_aid"
                    android:layout_margin="@dimen/_3sdp"
                    android:checked="true"
                    android:textSize="@dimen/_20sdp"/>

                <CheckBox
                    android:id="@+id/estipnCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estipn"
                    android:layout_margin="@dimen/_3sdp"
                    android:checked="true"
                    android:textSize="@dimen/_20sdp"/>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_above="@id/next_button"
                android:focusableInTouchMode="true"
                android:hint="@string/add_comment"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/CairoRegular">

                <EditText
                    android:id="@+id/comment_et"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_alignStart="@+id/il"
                    android:layout_alignBottom="@+id/il" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/next_button"
                style="@style/ActionButton.NextStepMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="9dp"
                android:text="@string/confirm" />


        </RelativeLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>